--- a/doc-Appliance_Hardening_Guide/Root_Password.adoc
+++ b/doc-Appliance_Hardening_Guide/Root_Password.adoc
@@ -4,37 +4,36 @@
 The Red Hat CloudForms Appliance is a virtual machine image that runs on a Red Hat Enterprise Linux-based operating system.
 This means users can access the base operating system through SSH.
 This is why it is advisable to change the default password.
-Continuing to use the default password leaves the Appliance vulnerable to any user attempting to gain root access. 
+Continuing to use the default password leaves the Appliance vulnerable to any user attempting to gain root access.
 
-Changing the [literal]+root+ password on the appliance uses the same process as changing any user password on a Linux-based system. 
+Changing the `root` password on the appliance uses the same process as changing any user password on a Linux-based system.
 
-.Procedure: Changing the root Password
-. Access your appliance through SSH as the [literal]+root+ user:
+. Access your appliance through SSH as the `root` user:
 +
-----
+------
 
 [user@localhost ~]$ ssh root@10.1.1.205
-----
+------
 +
-Substitute [literal]+10.1.1.205+ with the address of your appliance.
+Substitute `10.1.1.205` with the address of your appliance.
 
-. Enter the +passwd+ command, which changes the password for the current user:
+. Enter the `passwd` command, which changes the password for the current user:
 +
-----
+------
 
 [root@ ~]# passwd
-----
+------
 
-. Enter and Confirm and new password for the [literal]+root+ user. 
+. Enter and Confirm and new password for the `root` user.
 +
-----
+------
 
 Changing password for user root.
 New password: ************
 Confirm password: ************
-----
+------
 
-. Log out of the appliance. 
+. Log out of the appliance.
 
-The Red Hat CloudForms Appliance now has a non-default [literal]+root+ password.
-This prevents unauthorized access to your appliance through SSH. 
+The Red Hat CloudForms Appliance now has a non-default `root` password.
+This prevents unauthorized access to your appliance through SSH.
