--- a/doc-Appliance_Hardening_Guide/Firewall.adoc
+++ b/doc-Appliance_Hardening_Guide/Firewall.adoc
@@ -11,12 +11,12 @@ A new appliance starts with a few standard ports open:
 You might need to restrict or open access to certain services on your appliance in the future.
 In such situations, use the following method:
 
-* Use +firewalld+ to enable a service or port.
+* Use `firewalld` to enable a service or port.
   For example, to open the LDAP port:
 +
-----
+------
 [root@ ~]# firewall-cmd --zone=public --permanent --add-port=389/tcp
-----
+------
 
 The following table lists the appliance's main services and their respective ports.
 
@@ -600,7 +600,7 @@ The following table lists the appliance's main services and their respective por
 |
 |
 
-                            RHEV-M History Database (Database connectivity not enabled by default). See https://access.redhat.com/site/solutions/63277[How to access RHEV-M Postgres DB from remote machine].
+                            RHEV-M History Database (Database connectivity not enabled by default). See https://access.redhat.com/site/solutions/63277[How to access the RHEV-M Postgres DB from a remote machine].
 
 
 
@@ -611,7 +611,7 @@ The following table lists the appliance's main services and their respective por
 
 |
 
-                            RHEVH Hosts or RHEL Hypervisors
+                            RHEV-H Hosts or RHEL Hypervisors
 
 
 |
@@ -638,7 +638,7 @@ The following table lists the appliance's main services and their respective por
 
 |
 
-                            RHEVH Hosts or RHEL Hypervisors
+                            RHEV-H Hosts or RHEL Hypervisors
 
 
 |
