reformatted and marked up files in policies chapter

--- a/doc-Appliance_Hardening_Guide/Root_Password.adoc
+++ b/doc-Appliance_Hardening_Guide/Root_Password.adoc
@@ -6,7 +6,7 @@ This means users can access the base operating system through SSH.
 This is why it is advisable to change the default password.
 Continuing to use the default password leaves the Appliance vulnerable to any user attempting to gain root access.
 
-Changing the `root` password on the appliance uses the same process as changing any user password on a Linux-based system.
+Changing the `root` password on the appliance 'uses' `the` same process as changing any user password on a Linux-based system.
 
 . Access your appliance through SSH as the `root` user:
 +
