--- a/doc-Defining_Policies_and_Profiles/topics/Editing_Policy_Event_Assignments.adoc
+++ b/doc-Defining_Policies_and_Profiles/topics/Editing_Policy_Event_Assignments.adoc
@@ -5,15 +5,15 @@ occur in your virtual infrastructure. This procedure enables you to
 select those events and the actions that should occur based on the
 evaluation of the scopes and conditions for the policy.
 
-. Navigate to `Control` -> `Explorer`.
+. Navigate to *Control → Explorer*.
 
-. Click the `Policies` accordion and select the control policy you want to
+. Click the *Policies* accordion and select the control policy you want to
 assign events to.
 
-. Click image:../images/1847.png[image] (`Configuration`),
-image:../images/1880.png[image] (`Edit this Policy's Event assignments`).
+. Click image:../images/1847.png[image] (*Configuration*),
+image:../images/1880.png[image] (*Edit this Policy's Event assignments*).
 
 . Check all the events you want to assign to this policy. For a
-description of the events, see xref:chap_events[].
+description of the events, see <<chap_events>>.
 
-. Click `Save`.
+. Click *Save*.
