--- a/doc-Defining_Policies_and_Profiles/topics/To_create_a_Control_Policy.adoc
+++ b/doc-Defining_Policies_and_Profiles/topics/To_create_a_Control_Policy.adoc
@@ -13,32 +13,32 @@ Conditions and custom actions can be created separately as well. Those
 procedures are described in later sections in conditions and actions.
 Also, a description of all events is provided in events.
 
-. Navigate to `Control` -> `Explorer`.
+. Navigate to *Control → Explorer*.
 
-. Click the `Policies` accordion, and select `Control Policies`.
+. Click the *Policies* accordion, and select *Control Policies*.
 
-. Select either `Host Control Policies` or `VM Control Policies`.
+. Select either *Host Control Policies* or *VM Control Policies*.
 
-. Click image:../images/1847.png[image] (`Configuration`),
-image:../images/1848.png[image] (`Add New Host/VM Control Policy`).
+. Click image:../images/1847.png[image] (*Configuration*),
+image:../images/1848.png[image] (*Add New Host/VM Control Policy*).
 
-. Type in a `Description`.
+. Type in a *Description*.
 +
 image::../images/1849.png[image]
 
-. Uncheck `Active` if you do not want this policy processed even when
+. Uncheck *Active* if you do not want this policy processed even when
 assigned to a resource.
 
-. You can enter a `Scope` here (You can also create a scope as part of a
+. You can enter a *Scope* here (You can also create a scope as part of a
 condition, or not use one at all). If the host or virtual machine is not
 included in the scope, no actions will be run.
 
-. In the `Notes` area, add a detailed explanation of the policy.
+. In the *Notes* area, add a detailed explanation of the policy.
 
-. Click `Add`. You are brought to the page where you add conditions and
+. Click *Add*. You are brought to the page where you add conditions and
 events to your new policy.
 +
 image::../images/1850.png[image]
 
-. Click image:../images/1847.png[image] (`Configuration`) to associate
+. Click image:../images/1847.png[image] (*Configuration*) to associate
 conditions, events, and actions with the policy.
