--- a/doc-Managing_Providers/topics/Adding_an_OpenShift_Provider.adoc
+++ b/doc-Managing_Providers/topics/Adding_an_OpenShift_Provider.adoc
@@ -2,20 +2,22 @@
 
 After initial installation and creation of a CloudForms Management Engine environment and configuration of an OpenShift cluster service account, add an OpenShift Enterprise provider by following the procedure below.
 
-For information on how to configure an OpenShift cluster service account, see <<Configuring Service Accounts>>.
+For information on how to configure an OpenShift cluster service account, see link:https://access.redhat.com/documentation/en/red-hat-cloudforms/version-4.0/managing-providers/#configuring_service_accounts[Configuring Service Accounts].
 
-.Procedure: To Add an OpenShift Enterprise Provider
 . Navigate to menu:Containers[Providers]. 
-. Click  image:images/1847.png[] btn:[Configuration], then click  image:images/1848.png[] btn:[Add a New Containers Provider]. 
-. Enter a #Name# for the provider. 
-. From the #Type# drop-down menu select #OpenShift Enterprise#.
-. Enter the #Hostname or IP address# of the provider. 
+. Click  image:images/1847.png[] (*Configuration*), then click  image:images/1848.png[] (*Add a New Containers Provider*). 
+. Enter a *Name* for the provider. 
+. From the *Type* drop-down menu select *OpenShift Enterprise*.
+. Enter the *Hostname or IP address* of the provider. 
 +
-IMPORTANT: The #Hostname# must use a unique fully qualified domain name. 
+[IMPORTANT]
+======
+The *Hostname* must use a unique fully qualified domain name. 
+======
 +
-. Enter the #Port# of the provider.
-  The default port is [literal]+8443+. 
-. Under #Credentials#, enter the token in the #Token# field. 
-* Click btn:[Validate] to confirm that the CloudForms Management Engine can connect to the OpenShift Enterprise provider using the provided token. 
-. Click btn:[Add]. 
+. Enter the *Port* of the provider.
+  The default port is `8443`. 
+. Under *Credentials*, enter the token in the *Token* field. 
+* Click *Validate* to confirm that the CloudForms Management Engine can connect to the OpenShift Enterprise provider using the provided token. 
+. Click *Add*. 
 
