--- a/doc-Managing_Providers/topics/Adding_an_OpenShift_Provider.adoc
+++ b/doc-Managing_Providers/topics/Adding_an_OpenShift_Provider.adoc
@@ -5,7 +5,7 @@ After initial installation and creation of a CloudForms Management Engine enviro
 For information on how to configure an OpenShift cluster service account, see link:https://access.redhat.com/documentation/en/red-hat-cloudforms/version-4.0/managing-providers/#configuring_service_accounts[Configuring Service Accounts].
 
 . Navigate to menu:Containers[Providers]. 
-. Click  image:images/1847.png[] (*Configuration*), then click  image:images/1848.png[] (*Add a New Containers Provider*). 
+. Click  image:images/1847.png[Configuration] (*Configuration*), then click  image:images/1848.png[Add a New Containers Provider] (*Add a New Containers Provider*). 
 . Enter a *Name* for the provider. 
 . From the *Type* drop-down menu select *OpenShift Enterprise*.
 . Enter the *Hostname or IP address* of the provider. 
