--- a/doc-Managing_Providers/topics/Authenticating_Red_Hat_Enterprise_Virtualization_Hosts.adoc
+++ b/doc-Managing_Providers/topics/Authenticating_Red_Hat_Enterprise_Virtualization_Hosts.adoc
@@ -4,20 +4,20 @@ After adding a Red Hat Enterprise Virtualization infrastructure provider, you mu
 
 . Navigate to menu:Infrastructure[Providers]. 
 . Click on a provider to display its summary screen. 
-. On the summary screen, click #Hosts# in the #Relationships# information box to display the hosts on that provider. 
+. On the summary screen, click *Hosts* in the *Relationships* information box to display the hosts on that provider. 
 . Select the hosts to authenticate.
-  You can select all hosts using the #Check All# option. 
-. Click  image:images/1847.png[] btn:[(Configuration)]. 
-. Click  image:images/1851.png[] btn:[(Edit this item)]. 
-. In the #Credentials# area, enter credentials for the following, as required:
- .. #Default#: This field is mandatory. Users should have privileged access such as, root or administrator. 
- .. #Remote Login#: Credentials for this field are required if SSH login is disabled for the #Default# account. 
- .. #Web Services#: This tab is used for access to Web Services in Red Hat Enterprise Virtuaization Manager.
- .. #IPMI#:  This tab is used for access to IPMI.
-. Click btn:[Validate]. 
+  You can select all hosts using the *Check All* option. 
+. Click  image:images/1847.png[Configuration] (*Configuration*). 
+. Click  image:images/1851.png[Edit this item] (*Edit this item*). 
+. In the *Credentials* area, enter credentials for the following, as required:
+ .. *Default*: This field is mandatory. Users should have privileged access such as, root or administrator. 
+ .. *Remote Login*: Credentials for this field are required if SSH login is disabled for the *Default* account. 
+ .. *Web Services*: This tab is used for access to Web Services in Red Hat Enterprise Virtuaization Manager.
+ .. *IPMI*:  This tab is used for access to IPMI.
+. Click *Validate*. 
 . If editing multiple hosts:
- .. Select a host from the #Select Host to validate against# list. 
- .. If required, enter credentials for #Remote Login#, #Web Services#, and #IPMI# in their respective tabs; click btn:[Validate].
+ .. Select a host from the *Select Host to validate against* list. 
+ .. If required, enter credentials for *Remote Login*, *Web Services*, and *IPMI* in their respective tabs; click *Validate*.
  .. Select another host to validate each of these credentials against. 
-. Click btn:[Add].
+. Click *Add*.
 
