--- a/doc-Managing_Providers/topics/Authenticating_to_Microsoft_SCVMM.adoc
+++ b/doc-Managing_Providers/topics/Authenticating_to_Microsoft_SCVMM.adoc
@@ -3,9 +3,11 @@
 You must enable WinRM to listen for HTTP traffic on Microsoft SCVMM servers in order for CloudForms Management Engine to establish a connection.
 You must also set the appropriate execution policy on the SCVMM server to allow PowerShell scripts from the appliance to run remotely. 
 
-IMPORTANT: Support for Microsoft SCVMM is in Technology Preview.
-See https://access.redhat.com/support/offerings/techpreview/[Technology Preview Features Support Scope]. 
-
+[IMPORTANT]
+======
+Support for Microsoft SCVMM is in Technology Preview.
+======
+See link:https://access.redhat.com/support/offerings/techpreview/[Technology Preview Features Support Scope]. 
 
 . Log in to the Microsoft SCVMM server and enable WinRM for configuration.
 +
@@ -35,7 +37,7 @@ winrm set winrm/config/service '@{AllowUnencrypted="true"}'
 Set-ExecutionPolicy RemoteSigned
 ----
 +
-For more information on SCVMM remote script execution policies, see http://technet.microsoft.com/en-us/library/ee176961.aspx[Using the Set-ExecutionPolicy Cmdlet]. 
+For more information on SCVMM remote script execution policies, see link:http://technet.microsoft.com/en-us/library/ee176961.aspx[Using the Set-ExecutionPolicy Cmdlet]. 
 
-If PowerShell returns an error, search for [literal]+log_dos_error_results+ in the [path]_evm.log_ and [path]_scvmm.log_ files for information. 
+If PowerShell returns an error, search for `log_dos_error_results` in the `evm.log` and `scvmm.log` files for information. 
 
