--- a/doc-Managing_Providers/topics/Adding_OpenStack_Providers.adoc
+++ b/doc-Managing_Providers/topics/Adding_OpenStack_Providers.adoc
@@ -22,7 +22,7 @@ IMPORTANT: If the Keystone service is configured to use SSL, you must enter the 
   By default, the zone is set to *default*. 
 . In the *Credentials* area, under *Default*, provide the login credentials required for the Keystone user: 
 +
-IMPORTANT: To enable discovery of OpenStack cloud providers, ensure that the `_iptables_` for the OpenStack host providing Keystone services allows port 5000 access to all hosts on the same network. 
+IMPORTANT: To enable discovery of OpenStack cloud providers, ensure that the `iptables` for the OpenStack host providing Keystone services allows port 5000 access to all hosts on the same network. 
 +
 * Enter the user name in the *Username* field. 
 * Enter the user password in the *Password* field. 
