--- a/doc-Managing_Providers/topics/Discovering_Azure_Providers.adoc
+++ b/doc-Managing_Providers/topics/Discovering_Azure_Providers.adoc
@@ -2,10 +2,9 @@
 
 CloudForms Management Engine provides the ability to discover a set of Microsoft Azure providers across all regions. 
 
-.Procedure: To Discover an Azure Provider
 . Navigate to menu:Clouds[Providers]. 
-. Click  image:images/1847.png[] btn:[(Configuration)], then click image:images/2119.png[] btn:[(Discover Cloud Providers)].
-. Select Azure from the #Discover Type# list.
-. In the Credentials section, enter the #Client ID#, #Client Key#, and #Azure Tenant ID#.
-. Click btn:[Start].
+. Click  image:images/1847.png[Configuration] (*Configuration*), then click image:images/2119.png[Discover Cloud Providers] (*Discover Cloud Providers*).
+. Select Azure from the *Discover Type* list.
+. In the Credentials section, enter the *Client ID*, *Client Key*, and *Azure Tenant ID*.
+. Click *Start*.
 
