--- a/doc-Managing_Providers/topics/Enabling_AWS_Config_Notifications.adoc
+++ b/doc-Managing_Providers/topics/Enabling_AWS_Config_Notifications.adoc
@@ -2,16 +2,15 @@
 
 Amazon's AWS Config notifies subscribers of changes in a region through its Simple Notification Service (SNS). Red Hat CloudForms subscribes to the SNS service for AWS Config deltas and converts the deltas into Red Hat CloudForms events. 
 
-
 . Enable the AWS Config service in the AWS Management Console.
-  See the http://aws.amazon.com/documentation/config/[AWS Config Developer Guide] for more information. 
-. Create a new Amazon SNS topic named [literal]+AWSConfig_topic+.
+  See the link:http://aws.amazon.com/documentation/config/[AWS Config Developer Guide] for more information. 
+. Create a new Amazon SNS topic named `AWSConfig_topic`.
   CloudForms automatically connects to this topic. 
 . (Optional) Configure the frequency of delta creation in the AWS Management Console. 
 
 You can assign Red Hat CloudForms policies to the AWS events listed below.
-The appliance performs a provider refresh on all these events except for [code]+AWS_EC2_Instance_UPDATE+.
-See the _Defining Policies and Profiles_ guide, available from https://access.redhat.com/documentation/en/red-hat-cloudforms/, for more information on working with CloudForms policies. 
+The appliance performs a provider refresh on all these events except for `AWS_EC2_Instance_UPDATE`.
+See the link:https://access.redhat.com/documentation/en/red-hat-cloudforms/4.0/defining-policies-and-profiles/defining-policies-and-profiles[Defining Policies and Profiles guide], for more information on working with CloudForms policies. 
 
 [cols="1,1,1", options="header"]
 |===
