--- a/doc-Managing_Providers/topics/Performing_SmartState_Analysis_on_Datastores.adoc
+++ b/doc-Managing_Providers/topics/Performing_SmartState_Analysis_on_Datastores.adoc
@@ -11,6 +11,6 @@ If Capacity and Utilization roles are enabled, CloudForms Management Engine perf
 
 . Navigate to menu:Infrastructure[Datastores]. 
 . Select the datastores to analyze. 
-. Click  image:images/1847.png[] btn:[(Configuration)], and then  image:images/2147.png[] btn:[(Perform SmartState Analysis)]. 
-. Click btn:[OK].
+. Click  image:images/1847.png[Configuration] (*Configuration*), and then  image:images/2147.png[Perform SmartState Analysis] (*Perform SmartState Analysis*). 
+. Click *OK*.
 
