--- a/doc-Managing_Providers/topics/Refreshing_Cloud_Providers.adoc
+++ b/doc-Managing_Providers/topics/Refreshing_Cloud_Providers.adoc
@@ -5,6 +5,6 @@ Ensure the chosen cloud providers have the correct credentials before refreshing
 
 . Navigate to menu:Clouds[Providers]. 
 . Select the checkboxes for the cloud providers to refresh. 
-. Click  image:images/1847.png[] btn:[(Configuration)], and then  image:images/2003.png[]btn:[(Refresh Relationships and Power States)]. 
-. Click btn:[OK].
+. Click  image:images/1847.png[Configuration] (*Configuration*), and then image:images/2003.png[Refresh Relationships and Power States] (*Refresh Relationships and Power States*). 
+. Click *OK*.
 
