--- a/doc-Managing_Providers/topics/Refreshing_Multiple_Management_Systems.adoc
+++ b/doc-Managing_Providers/topics/Refreshing_Multiple_Management_Systems.adoc
@@ -2,12 +2,10 @@
 = Refreshing Providers
 
 Refresh a provider to find other resources related to it.
-Use #Refresh# after initial discovery to get the latest data about the provider and the virtual machines it can access.
+Use *Refresh* after initial discovery to get the latest data about the provider and the virtual machines it can access.
 Ensure the provider has credentials to do this.
-If the providers were added using #Discovery#, add credentials using  image:images/1851.png[] btn:[(Edit Selected Infrastructure Provider)]. 
-
+If the providers were added using *Discovery*, add credentials using  image:images/1851.png[Edit Selected Infrastructure Provider] (*Edit Selected Infrastructure Provider*). 
 . Navigate to menu:Infrastructure[Providers]. 
 . Select the providers to refresh. 
-. Click  image:images/1847.png[] btn:[(Configuration)], and then  image:images/2003.png[] btn:[(Refresh Relationships and Power States)]. 
-. Click btn:[OK].
-
+. Click  image:images/1847.png[Configuration] btn:[(Configuration)], and then  image:images/2003.png[Refresh Relationships and Power States] (*Refresh Relationships and Power States*). 
+. Click *OK*.
