--- a/doc-Managing_Providers/topics/Removing_Cloud_Providers.adoc
+++ b/doc-Managing_Providers/topics/Removing_Cloud_Providers.adoc
@@ -4,6 +4,6 @@ A cloud provider might require removal from the VMDB if it is no longer in use.
 
 . Navigate to menu:Clouds[Providers]. 
 . Check the cloud providers to remove. 
-. Click  image:images/1847.png[] btn:[(Configuration)], and then  image:images/2157.png[] btn:[(Remove Cloud Providers from the VMDB)]. 
-. Click btn:[OK].
+. Click  image:images/1847.png[Configuration] (*Configuration*), and then  image:images/2157.png[Remove Cloud Providers from the VMDB] (*Remove Cloud Providers from the VMDB*). 
+. Click *OK*.
 
