--- a/doc-Managing_Providers/topics/Removing_Containers_Providers.adoc
+++ b/doc-Managing_Providers/topics/Removing_Containers_Providers.adoc
@@ -2,9 +2,8 @@
 
 You may require to remove a containers provider from the VMDB if the provider is no longer in use.
 
-.Procedure: To Remove Containers Providers
 . Navigate to menu:Containers[Providers]. 
 . Select the checkboxes for the containers providers to remove. 
-. Click  image:images/1847.png[] btn:[Configuration], and then  image:images/2157.png[] btn:[Remove Containers Providers from the VMDB].
-. Click btn:[OK].
+. Click  image:images/1847.png[Configuration] (*Configuration*), and then  image:images/2157.png[Remove Containers Providers from the VMDB] (*Remove Containers Providers from the VMDB*).
+. Click *OK*.
 
