--- a/doc-Managing_Providers/topics/Reviewing_a_Management_System.adoc
+++ b/doc-Managing_Providers/topics/Reviewing_a_Management_System.adoc
@@ -7,7 +7,7 @@ This displays various options to access provider information.
 .Provider Management Screen
 image::images/providers-summary-new.png[]
 
-. Provider Taskbar: Choose between Configuration, Policy and Monitoring options for the selected provider 
-. Provider Summary: Displays provider summary such as Properties, Relationships, and Smart Management 
-. Provider Summary PDF: Generates provider summary in PDF format 
-. Provider Accordion: Displays details about Properties and Relationships for the selected provider 
+. *Provider Taskbar*: Choose between Configuration, Policy and Monitoring options for the selected provider. 
+. *Provider Summary*: Displays provider summary such as Properties, Relationships, and Smart Management. 
+. *Provider Summary PDF*: Generates provider summary in PDF format. 
+. *Provider Accordion*: Displays details about Properties and Relationships for the selected provider. 
