--- a/doc-Managing_Providers/topics/Tagging_Cloud_Providers.adoc
+++ b/doc-Managing_Providers/topics/Tagging_Cloud_Providers.adoc
@@ -1,17 +1,14 @@
 = Tagging Cloud Providers
 
 Apply tags to all cloud providers to categorize them together at the same time.
-Before assigning tags, create them using instructions in the _General Configuration_ guide, available from https://access.redhat.com/documentation/en/red-hat-cloudforms/.
+Before assigning tags, create them using instructions in the link:https://access.redhat.com/documentation/en/red-hat-cloudforms/4.0/general-configuration/general-configuration[General Configuration guide].
 
-.Procedure: To Tag Cloud Providers
 . Navigate to menu:Clouds[Providers]. 
 . Select the checkboxes for the Cloud Providers to tag. 
-. Click  image:images/1941.png[] btn:[(Policy)], and then  image:images/2158.png[] btn:[(Edit Tags)]. 
-. #Select a customer tag to assign# from the first list. 
+. Click  image:images/1941.png[Policy] (*Policy*), and then image:images/2158.png[Edit Tags] (*Edit Tags*). 
+. *Select a customer tag to assign* from the first list. 
 +
-
 image::images/2219.png[]
-
++
 . Select a value to assign from the second list. 
-. Click btn:[Save].
-
+. Click *Save*.
