--- a/doc-Managing_Providers/topics/Tagging_Containers_Providers.adoc
+++ b/doc-Managing_Providers/topics/Tagging_Containers_Providers.adoc
@@ -3,14 +3,12 @@
 Apply tags to all containers providers to categorize them together at the same time.
 Before assigning tags, create them using instructions in the _General Configuration_ guide, available from https://access.redhat.com/documentation/en/red-hat-cloudforms/.
 
-.Procedure: To Tag Containers Providers
 . Navigate to menu:Containers[Providers]. 
 . Select the checkboxes for the containers providers to tag. 
-. Click  image:images/1941.png[] btn:[Policy], and then  image:images/2158.png[] btn:[Edit Tags]. 
+. Click  image:images/1941.png[Policy] (*Policy*), and then  image:images/2158.png[Edit Tags](*Edit Tags*). 
 . Select a tag to assign from the drop-down menu. 
 +
 image::images/2219.png[]
 +
 . Select a value to assign. 
-. Click btn:[Save]. 
-
+. Click *Save*. 
