--- a/doc-Managing_Providers/topics/Tagging_Containers_Providers.adoc
+++ b/doc-Managing_Providers/topics/Tagging_Containers_Providers.adoc
@@ -1,7 +1,7 @@
 = Tagging Containers Providers
 
 Apply tags to all containers providers to categorize them together at the same time.
-Before assigning tags, create them using instructions in the _General Configuration_ guide, available from https://access.redhat.com/documentation/en/red-hat-cloudforms/.
+Before assigning tags, create them using instructions in the link:https://access.redhat.com/documentation/en/red-hat-cloudforms/4.0/general-configuration/general-configuration[General Configuration guide].
 
 . Navigate to menu:Containers[Providers]. 
 . Select the checkboxes for the containers providers to tag. 
