--- a/doc-Managing_Providers/topics/Tagging_Multiple_Management_Systems.adoc
+++ b/doc-Managing_Providers/topics/Tagging_Multiple_Management_Systems.adoc
@@ -2,15 +2,13 @@
 = Tagging Multiple Providers
 
 Apply tags to all providers to categorize them together at the same time.
-Before assigning tags, create them using instructions in the _General Configuration_ guide, available from https://access.redhat.com/documentation/en/red-hat-cloudforms/.
+Before assigning tags, create them using instructions in the link:https://access.redhat.com/documentation/en/red-hat-cloudforms/4.0/general-configuration/general-configuration[General Configuration guide].
 
 . Navigate to menu:Infrastructure[Providers]. 
 . Check the providers to tag. 
-. Click  image:images/1941.png[] (btn:[Policy]), and then  image:images/2158.png[] (btn:[Edit Tags]). 
-. In the #Tag Assignment# area, select a customer tag to assign from the first list, then select a value to assign from the second list.
+. Click  image:images/1941.png[Policy] (*Policy*), and then  image:images/2158.png[Edit Tags] (*Edit Tags*). 
+. In the *Tag Assignment* area, select a customer tag to assign from the first list, then select a value to assign from the second list.
 +
-
 image::images/2194.png[]
-
-. Select more tags as required; click btn:[Save].
-
++
+. Select more tags as required; click (*Save*).
