Yum is a package. Changed to package markup - `yum`

--- a/doc-Release_Notes/register_cfme.adoc
+++ b/doc-Release_Notes/register_cfme.adoc
@@ -16,7 +16,7 @@ Three steps are required to update the CloudForms Management Engine Appliance:
 
 The following tools are used during the update process:
 
-* *yum* provides package installation, updates, and dependency checking.
+* `yum` provides package installation, updates, and dependency checking.
 * Red Hat Subscription Manager manages subscriptions and entitlements.
 * Red Hat Satellite Server runs at customer locations providing local system registration and updates from inside the customer's firewall.
 
