--- a/doc-Managing_Providers/topics/Tagging_a_Datastore.adoc
+++ b/doc-Managing_Providers/topics/Tagging_a_Datastore.adoc
@@ -1,15 +1,14 @@
 = Tagging a Datastore
 
 Use tags to categorize a datastore.
-Before assigning tags, create them with instructions in the _General Configuration_ guide, available from https://access.redhat.com/documentation/en/red-hat-cloudforms/.
+Before assigning tags, create them using instructions in the link:https://access.redhat.com/documentation/en/red-hat-cloudforms/4.0/general-configuration/general-configuration[General Configuration guide].
 
 . Navigate to menu:Infrastructure[Datastores]. 
 . Click the datastore to tag. 
-. Click  image:images/1941.png[] btn:[(Policy)], and then  image:images/2158.png[] btn:[(Edit Tags)]. 
+. Click  image:images/1941.png[Policy] (*Policy*), and then  image:images/2158.png[Edit Tags] (*Edit Tags*).  
 . Select a customer tag from the first list, and then a value for the tag from the second list. 
 +
-
 image::images/2238.png[]
-
-. Select more tags or click btn:[Save] to save your changes.
++
+. Select more tags as required; click (*Save*).
 
