--- a/doc-Managing_Providers/topics/To_remove_Management_Systems.adoc
+++ b/doc-Managing_Providers/topics/To_remove_Management_Systems.adoc
@@ -10,6 +10,5 @@ Review all the dependencies carefully before deleting a provider.
 
 . Navigate to menu:Infrastructure[Providers]. 
 . Select the check box for the provider to delete. 
-. Click  image:images/1847.png[] btn:[(Configuration)], then  image:images/2157.png[] btn:[(Remove Infrastructure Providers from the VMDB)]. 
-. Click btn:[OK].
-
+. Click  image:images/1847.png[Configuration] (*Configuration*), then  image:images/2157.png[Remove Infrastructure Providers from the VMDB] (*Remove Infrastructure Providers from the VMDB*). 
+. Click (*OK*).
