--- a/doc-Managing_Providers/topics/Viewing_Capacity_and_Utilization_Charts_for_a_Datastore.adoc
+++ b/doc-Managing_Providers/topics/Viewing_Capacity_and_Utilization_Charts_for_a_Datastore.adoc
@@ -8,24 +8,28 @@ CloudForms Management Engine requires network visibility to your provider assign
 ======
 
 . Navigate to menu:Infrastructure[Datastores], then click the Datastore that you want to view Capacity and Utilization data for. 
-. Click  image:images/1994.png[] btn:[(Monitoring)], and then  image:images/1994.png[] (btn:[Utilization]) or from the Datastore Accordion, click menu:Properties[Capacity & Utilization]. 
-. From #Interval#, select to view hourly or daily data points and the dates to view data.
-  Use #VM Types to Include# to include only managed/registered, managed/unregistered, or unmanaged virtual machines.
+. Click  image:images/1994.png[Monitoring] (*Monitoring*), and then  image:images/1994.png[Utilization] (*Utilization*) or from the Datastore Accordion, click menu:Properties[Capacity & Utilization]. 
+. From *Interval*, select to view hourly or daily data points and the dates to view data.
+  Use *VM Types to Include* to include only managed/registered, managed/unregistered, or unmanaged virtual machines.
   The following definitions will be helpful. 
-+
-* _Managed/Registered VM_ - A virtual machine connected to a host and exists in the VMDB.
+* *Managed/Registered VM* - A virtual machine connected to a host and exists in the VMDB.
   Also, a template connected to a management system and exists in the VMDB. 
 +
-NOTE: Templates cannot be connected to a Host. 
-
-* _Managed/Unregistered VM_ - A virtual machine or template that resides on a repository or is no longer connected to a management system or host and exists in the VMDB.
+[NOTE]
+======
+Templates cannot be connected to a Host. 
+======
++
+* *Managed/Unregistered VM* - A virtual machine or template that resides on a repository or is no longer connected to a management system or host and exists in the VMDB.
   A virtual machine previously considered registered might become unregistered if the virtual machine is removed from management system inventory. 
-* _Not Managed_ - Files discovered on a datastore that do not have a virtual machine associated with them in the VMDB.
+* *Not Managed* - Files discovered on a datastore that do not have a virtual machine associated with them in the VMDB.
   These files might be registered to a management system that CloudForms Management Engine does not have configuration information.
   Possible causes might be the management system has not been discovered or the management system has been discovered but no security credentials are provided. 
-+
-Use #Time Profiles# to select a time range for the data. 
 
-NOTE: Daily charts only include full days of data.
+Use *Time Profiles* to select a time range for the data. 
+
+[NOTE] 
+======
+Daily charts only include full days of data.
 If a day does not include all the 24 data points for a day, the data does not show for that day.
-
+======
