--- a/doc-Managing_Providers/topics/Viewing_the_Management_System_Timeline.adoc
+++ b/doc-Managing_Providers/topics/Viewing_the_Management_System_Timeline.adoc
@@ -5,20 +5,18 @@ View the timeline of events for the virtual machines registered to a provider.
 
 . Navigate to menu:Infrastructure[Providers]. 
 . Click a provider. 
-. Click  image:images/1994.png[] btn:[(Monitoring)], and then  image:images/1995.png[] btn:[(Timelines)] from the taskbar, or from the provider accordion, click menu:Properties[Timeline]. 
-. From #Options#, customize the period of time to display and the types of events to see. 
+. Click  image:images/1994.png[Monitoring] (*Monitoring*), and then  image:images/1995.png[Timelines] (*Timelines*)from the taskbar, or from the provider accordion, click menu:Properties[Timeline]. 
+. From *Options*, customize the period of time to display and the types of events to see. 
 +
-
 image::images/provider-timeline.png[]
 +
-* Use #Show# to select regular Management Events or Policy Events. 
-* Use the #Interval# dropdown to select hourly or daily data points. 
-* Use #Date# to type the date for the timeline to display. 
-* If you select to view a daily timeline, use #Show# to set how many days back to go.
+* Use *Show* to select regular Management Events or Policy Events. 
+* Use the *Interval* dropdown to select hourly or daily data points. 
+* Use *Date* to type the date for the timeline to display. 
+* If you select to view a daily timeline, use *Show* to set how many days back to go.
   The maximum history is 31 days. 
-* The three #Event Groups# lists allow you to select different groups of events to display.
+* The three *Event Groups* lists allow you to select different groups of events to display.
   Each has its own color. 
-* From the #Level# list, select a #Summary# event, or a #Detail# list of events.
-  For example, the detail level of a #Power On# event might include the power on request, the starting event, and the actual #Power On# event.
-  If you select #Summary#, only the Power On event displays in the timeline.
-
+* From the *Level* list, select a *Summary* event, or a *Detail* list of events.
+  For example, the detail level of a *Power On* event might include the power on request, the starting event, and the actual *Power On* event.
+  If you select *Summary*, only the Power On event displays in the timeline.
