syntax and markup changes for BZ#1289529

--- a/doc-Defining_Policies_and_Profiles/topics/Assigning_Policy_Profiles_to_a_Cloud_Provider.adoc
+++ b/doc-Defining_Policies_and_Profiles/topics/Assigning_Policy_Profiles_to_a_Cloud_Provider.adoc
@@ -1,15 +1,15 @@
 ==== Assigning Policy Profiles to a Cloud Provider
 
-. Navigate to `Clouds` -> `Providers`, check the provider you need to assign the
+. Navigate to *Clouds → Providers* and check the provider you need to assign the
 policy profiles to.
 
-. Click image:../images/1941.png[image] (`Policy`), and then click
-image:../images/1952.png[image](`Manage Policies`).
+. Click image:../images/1941.png[image] (*Policy*), and then click
+image:../images/1952.png[image](*Manage Policies*).
 
-. From the `Select Policy Profiles` area, click on the triangle next to a
+. From the *Select Policy Profiles* area, click on the triangle next to a
 desired policy profile to expand it and see its member policies.
 
 . Check the policy profiles you need to apply to the provider. The ones
 that are different from the previous setting will show in blue.
 
-. Click `Save`.
+. Click *Save*.
