--- a/doc-Defining_Policies_and_Profiles/topics/Deleting_a_Policy_Profile.adoc
+++ b/doc-Defining_Policies_and_Profiles/topics/Deleting_a_Policy_Profile.adoc
@@ -3,12 +3,12 @@
 Remove policy profiles that you no longer need. This does not remove the
 policies associated with the policy profile.
 
-. Navigate to `Control` -> `Explorer`.
+. Navigate to *Control → Explorer*.
 
-. Click on the `Policy Profile` accordion, then click the policy profile you
+. Click on the *Policy Profile* accordion, then click the policy profile you
 want to remove.
 
-. Click image:../images/1847.png[image] (`Configuration`),
-image:../images/1861.png[image] (`Remove this Policy Profile`).
+. Click image:../images/1847.png[image] (*Configuration*),
+image:../images/1861.png[image] (*Remove this Policy Profile*).
 
-. Click `OK` to confirm.
+. Click *OK* to confirm.
