--- a/doc-Defining_Policies_and_Profiles/topics/Creating_a_Condition.adoc
+++ b/doc-Defining_Policies_and_Profiles/topics/Creating_a_Condition.adoc
@@ -6,94 +6,93 @@ Engine console. You need to define a description and an expression
 element. The expression element defines what criteria you want to use to
 test the condition.
 
-. Navigate to `Control` -> `Explorer`.
+. Navigate to *Control → Explorer*.
 
-. Click the `Conditions` accordion, and select either `Host Conditions` or `VM
-Conditions`.
+. Click the *Conditions* accordion, and select either *Host Conditions* or *VM
+Conditions*.
 
-. Click image:../images/1847.png[image] (`Configuration`), then
-image:../images/1848.png[image] (`Add a New Host Condition`) or
-image:../images/1848.png[image] (`Add a New VM Condition`).
+. Click image:../images/1847.png[image] (*Configuration*), then
+image:../images/1848.png[image] (*Add a New Host Condition*) or
+image:../images/1848.png[image] (*Add a New VM Condition*).
 
-. Enter a `Description` for the condition.
+. Enter a *Description* for the condition.
 +
 image:../images/1886.png[image]
 
-. Click image:../images/1851.png[image] (`Edit this Scope`) in the `Scope` area
+. Click image:../images/1851.png[image] (*Edit this Scope*) in the *Scope* area
 to create a general condition based on a simple attribute. Based on what
 you choose, different options appear. Creating a scope is optional.
 +
 image:../images/1887.png[image]
 
-* Click `Field` to create criteria based on field values.
+* Click *Field* to create criteria based on field values.
 +
 image:../images/1888.png[image]
-* Click `Count of` to create criteria based on the count of something,
+* Click *Count of* to create criteria based on the count of something,
 such as the number of network adapters on the host.
 +
 image:../images/1889.png[image]
-* Click `Tag` to create criteria based on tags assigned to your resources.
+* Click *Tag* to create criteria based on tags assigned to your resources.
 For example, you can check the power state of a virtual machine or see
 if it is tagged as production.
 +
 image:../images/1890.png[image]
-* Click `Find` to seek a particular value, and then check a property. For
+* Click *Find* to seek a particular value, and then check a property. For
 example, finding the Admin account and checking that it is enabled. Use
 the following check commands:
-** `Check Any`: The result is true if one or more of the find results
+** *Check Any*: The result is true if one or more of the find results
 satisfy the check condition.
-** `Check All`: All of the find results must match for a true result.
-** `Check Count`: If the result satisfies the expression in check count,
+** *Check All*: All of the find results must match for a true result.
+** *Check Count*: If the result satisfies the expression in check count,
 the result is true.
 +
 image:../images/1891.png[image]
-* Click `Registry` to create criteria based on registry values. For
+* Click *Registry* to create criteria based on registry values. For
 example, you can check if DCOM is enabled on a Windows System. Note that
 this applies only to Windows operating systems. Registry will only be
 available if you are creating a VM Condition.
 +
 image:../images/1892.png[image]
 
-. Click image:../images/1863.png[image] (`Commit expression element changes`)
+. Click image:../images/1863.png[image] (*Commit expression element changes*)
 to add the scope.
 
-. Click image:../images/1851.png[image] (`Edit this Expression`) in the
-`Expression` area to create a general condition based on a simple
+. Click image:../images/1851.png[image] (*Edit this Expression*) in the
+*Expression* area to create a general condition based on a simple
 attribute. Based on what you choose, different options appear.
 
-* Click `Field` to create criteria based on field values.
+* Click *Field* to create criteria based on field values.
 +
 image:../images/1893.png[image]
-* Click `Count of` to create criteria based on the count of something,
+* Click *Count of* to create criteria based on the count of something,
 such as the number of snapshots for a virtual machine, or the number of
 virtual machines on a host.
 +
 image:../images/1894.png[image]
-* Click `Tag` to create criteria based on tags assigned to your resources.
+* Click *Tag* to create criteria based on tags assigned to your resources.
 For example, you can check the power state of a virtual machine or see
 if it is tagged as production.
 +
 image:../images/1895.png[image]
-* Click `Find` to seek a particular value, and then check a property. For
+* Click *Find* to seek a particular value, and then check a property. For
 example, finding the Admin account and checking that it is enabled. Use
 the following check commands.
-** `Check Any`: The result is true if one or more of the find results
+** *Check Any*: The result is true if one or more of the find results
 satisfy the check condition.
-** `Check All`: All of the find results must match for a true result.
-** `Check Count`: If the result satisfies the expression in check count,
+** *Check All*: All of the find results must match for a true result.
+** *Check Count*: If the result satisfies the expression in check count,
 the result is true.
 +
 image:../images/1896.png[image]
-* Click `Registry` to create criteria based on registry values. For
+* Click *Registry* to create criteria based on registry values. For
 example, you can check if DCOM is enabled on a Windows System. Note that
 this applies only to Windows operating systems.
 +
 image:../images/1897.png[image]
 
-. Click image:../images/1863.png[image] (`Commit expression element changes`)
+. Click image:../images/1863.png[image] (*Commit expression element changes*)
 to add the expression.
 
-. In `Notes`, type in a detailed explanation of the condition.
+. In *Notes*, type in a detailed explanation of the condition.
 
-. Click `Add`.
-
+. Click *Add*.
