--- a/doc-Defining_Policies_and_Profiles/topics/Deleting_a_Condition.adoc
+++ b/doc-Defining_Policies_and_Profiles/topics/Deleting_a_Condition.adoc
@@ -4,12 +4,12 @@ Remove conditions that are no longer applicable. You can only delete
 conditions that are not part of a policy. To be able to delete the
 condition, you must remove the policy first.
 
-. Navigate to `Control` -> `Explorer`.
+. Navigate to *Control → Explorer*.
 
-. Click the `Conditions` accordion, and click on the condition you want to
+. Click the *Conditions* accordion, and click on the condition you want to
 remove.
 
-. Click image:../images/1847.png[image] (`Configuration`),
-image:../images/1861.png[image] (`Delete this VM and Instance Condition`).
+. Click image:../images/1847.png[image] (*Configuration*),
+image:../images/1861.png[image] (*Delete this VM and Instance Condition*).
 
-. Click `OK` to confirm.
+. Click *OK* to confirm.
