--- a/doc-Defining_Policies_and_Profiles/topics/To_check_a_Virtual_Machine_for_Compliance_from_the_Summary_Screen.adoc
+++ b/doc-Defining_Policies_and_Profiles/topics/To_check_a_Virtual_Machine_for_Compliance_from_the_Summary_Screen.adoc
@@ -1,6 +1,6 @@
 ===== Checking a Virtual Machine for Compliance from the Summary Screen
 →
-. Navigate to *Infrastructure v Virtual Machines*, click the virtual machine you want to check for compliance.
+. Navigate to *Infrastructure → Virtual Machines*, click the virtual machine you want to check for compliance.
 
 . Click image:../images/1941.png[image] (*Policy*), and then
 image:../images/1942.png[image] (*Check Compliance of Last Known
