--- a/doc-Defining_Policies_and_Profiles/topics/To_create_a_set_custom_attribute_Action.adoc
+++ b/doc-Defining_Policies_and_Profiles/topics/To_create_a_set_custom_attribute_Action.adoc
@@ -4,19 +4,19 @@ The custom attribute must already exist in vCenter. See vCenter
 documentation for instructions. In this example, an attribute called
 CloudForms Management Engine policy already exists.
 
-. Navigate to `Control` -> `Explorer`.
+. Navigate to *Control → Explorer*.
 
-. Click the `Actions` accordion, then click image:../images/1847.png[image]
-(`Configuration`), image:../images/1848.png[image] (`Add a new Action`).
+. Click the *Actions* accordion, then click image:../images/1847.png[image]
+(*Configuration*), image:../images/1848.png[image] (*Add a new Action*).
 
-. Type in a `Description` for the action.
+. Type in a *Description* for the action.
 +
 image:../images/1926.png[image]
 
-. Select `Set a Custom Attribute in vCenter` from `Action Type`.
+. Select *Set a Custom Attribute in vCenter* from *Action Type*.
 
-. Type in the `Attribute Name` and `Value to Set`.
+. Type in the *Attribute Name* and *Value to Set*.
 +
 image:../images/1925.png[image]
 
-. Click `Add`.
+. Click *Add*.
