--- a/doc-Defining_Policies_and_Profiles/topics/To_create_an_Assign_Profile_to_Analysis_Task_action.adoc
+++ b/doc-Defining_Policies_and_Profiles/topics/To_create_an_Assign_Profile_to_Analysis_Task_action.adoc
@@ -1,19 +1,18 @@
 ==== Creating an Assign Profile to Analysis Task Action
 
-Use this action for assigning specific analysis profiles to virtual machines. You must create an analysis profile before assigning it to an action. You can only assign this action to an analysis start event. See the _General Configuration_ guide, available from https://access.redhat.com/documentation/en/red-hat-cloudforms/, for information on how to create analysis profiles.
+Use this action for assigning specific analysis profiles to virtual machines. You must create an analysis profile before assigning it to an action. You can only assign this action to an analysis start event. See the "Configuration" chapter in the link:https://access.redhat.com/documentation/en/red-hat-cloudforms/4.0/general-configuration/chapter-3-configuration[General Configuration] guide for information on how to create analysis profiles.
 
-. Navigate to `Control` -> `Explorer`.
+. Navigate to *Control → Explorer*
 
-. Click the `Actions` accordion, then click image:../images/1847.png[image]
-(`Configuration`), image:../images/1848.png[image] (`Add a new Action`).
+. Click the *Actions* accordion, then click image:../images/1847.png[image]
+(*Configuration*), image:../images/1848.png[image] (*Add a new Action*).
 
-. Type in a `Description` for the `Action Type`.
+. Type in a *Description* for the *Action Type*.
 +
 image:../images/1905.png[image]
 
-. Select `Assign Profile to Analysis Task` from `Action Type`.
+. Select *Assign Profile to Analysis Task* from *Action Type*.
 
-. Select a profile from the `Analysis profiles`.
+. Select a profile from the *Analysis profiles*.
 
-. Click `Add`.
-
+. Click *Add*.
