--- a/doc-Defining_Policies_and_Profiles/topics/To_create_an_SNMP_Action.adoc
+++ b/doc-Defining_Policies_and_Profiles/topics/To_create_an_SNMP_Action.adoc
@@ -2,16 +2,17 @@
 
 To send SNMP traps from the CloudForms Management Engine server, you
 must have the `Notifier` server role and the SNMP daemons enabled. For
-information on enabling SNMP, see the General Configuration guide.
+information on enabling SNMP, see the link:https://access.redhat.com/documentation/en/red-hat-cloudforms/4.0/general-configuration/general-configuration[General Configuration]
+guide.
 
-. Navigate to `Control` -> `Explorer`.
+. Navigate to *Control → Explorer*.
 
-. Click the `Actions` accordion, then click image:../images/1847.png[image]
-(`Configuration`), image:../images/1848.png[image] (`Add a new Action`).
+. Click the *Actions* accordion, then click image:../images/1847.png[image]
+(*Configuration*), image:../images/1848.png[image] (*Add a new Action*).
 
-. Enter a `Description` for the action.
+. Enter a *Description* for the action.
 
-. Select `Send an SNMP` Trap from `Action Type`.
+. Select *Send an SNMP* Trap from *Action Type*.
 
 . Type in the IP for the host to send the trap to, select the version of
 SNMP that you are using, and type in the Trap Object ID. Type in
@@ -34,10 +35,9 @@ Trap Object ID and Suffix Number
 
 . Type in the variables that you require in your message.
 
-. Click `Add`.
+. Click *Add*.
 
 [NOTE]
 ======
 When adding an SNMP action, be sure to set it as asynchronous.
 ======
-
