--- a/doc-Defining_Policies_and_Profiles/topics/To_create_an_e-mail_Action.adoc
+++ b/doc-Defining_Policies_and_Profiles/topics/To_create_an_e-mail_Action.adoc
@@ -2,22 +2,22 @@
 
 To send emails from the CloudForms Management Engine server, you must
 have the notifier server role enabled and have defined settings for SMTP
-email. For further information regarding SMTP, see the General Configuration
+email. For further information regarding SMTP, see the link:https://access.redhat.com/documentation/en/red-hat-cloudforms/4.0/general-configuration/general-configuration[General Configuration]
 guide.
 
-. Navigate to `Control` -> `Explorer`.
+. Navigate to *Control → Explorer*.
 
-. Click the `Actions` accordion, then click image:../images/1847.png[image]
-(`Configuration`), image:../images/1848.png[image] (`Add a new Action`).
+. Click the *Actions* accordion, then click image:../images/1847.png[image]
+(*Configuration*), image:../images/1848.png[image] (*Add a new Action*).
 
-. Type in a `Description` for the action.
+. Type in a *Description* for the action.
 +
 image:../images/1922.png[image]
 
-. Select `Send an E-mail` from `Action Type`.
+. Select *Send an E-mail* from *Action Type*.
 
-. Type in a `From E-mail Address` and `To E-mail Address`.
+. Type in a *From E-mail Address* and *To E-mail Address*.
 +
 image:../images/1921.png[image]
 
-. Click `Add`.
+. Click *Add*.
