--- a/doc-Release_Notes/register_cfme.adoc
+++ b/doc-Release_Notes/register_cfme.adoc
@@ -85,7 +85,7 @@ The *Red Hat Updates* page enables you to check for updates and update registere
 
 === Updating the Appliance Operating System
 
-Users update CloudForms Management Engine packages through the web console under menu:Configure[Configuration > Settings > Region > Red Hat Updates]. However, updating the Appliance's operating system requires a manual update using the 'yum' command.
+Users update CloudForms Management Engine packages through the web console under menu:Configure[Configuration > Settings > Region > Red Hat Updates]. However, updating the Appliance's operating system requires a manual update using the `yum` command.
 
 . Log in to the Appliance as the root user.
 . Run the `yum update` command and confirm any updates.
