--- a/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/Configuring_CloudForms.adoc
+++ b/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/Configuring_CloudForms.adoc
@@ -64,7 +64,7 @@ Before using CloudForms Management Engine, configure the database options for it
 
 [NOTE]
 =======
-See "CPU Sizing Assistant for a Dedicated VMDB Host" in the Deployment Planning Guide for guidelines on CPU requirements.
+See link:https://access.redhat.com/documentation/en/red-hat-cloudforms/version-4.0/deployment-planning-guide/#cpu_sizing_assistant_for_a_dedicated_vmdb_host[CPU Sizing Assistant for a Dedicated VMDB Host] in the Deployment Planning Guide for guidelines on CPU requirements.
 =======
 
 === Configuring an Internal Database
